--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "expect": "^23.4.0",
-    "express": "^4.16.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   }
